--- a/css/mQueries.css
+++ b/css/mQueries.css
@@ -7,11 +7,11 @@
   body, .inside body {
     margin: 0;
   }
-  .inside nav{
+  #nav-head {
     min-height: 102px;
 
   }
-  .inside nav h1{
+  #nav-head h1{
     padding: 20px 30px;
     margin:auto;
   }
@@ -32,7 +32,7 @@
     min-height: 270px;
   }
 
-  #restaurants-list li h1{
+  #restaurants-list li h2{
     padding: 10px 7px 10px 20px;
     margin: 0 0 15px;
   }
@@ -119,7 +119,7 @@
   }
   #restaurant-name {
     letter-spacing: .4em;
-    font-size: 1.8em;
+    font-size: 1.5em;
   }
   .inside #map-container{
     position: sticky;
@@ -188,7 +188,7 @@
   #restaurants-list li{
     width: 45%;
   }
-  #restaurants-list li h1{
+  #restaurants-list li h2{
     padding: 10px 20px;
     margin: 10px 0;
   }
