--- a/css/styles.css
+++ b/css/styles.css
@@ -49,14 +49,14 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
-nav {
+#nav-head {
   display: flex;
   width: 100%;
   height: 80px;
   background-color: #000000FF;
   text-align:center;
 }
-  nav h1 a {
+nav h1 a {
   color: #FAB604FF;
   font-size: calc(0.45em + 3vmin);
   font-weight: 200;
@@ -65,7 +65,6 @@ nav {
 nav h1 {
   margin: auto;
   padding: 10px;
-}
   text-transform: uppercase;
 }
 #breadcrumb {
@@ -166,7 +165,7 @@ nav h1 {
   min-height: auto;
   min-width: 100%;
 }
-#restaurants-list li h1 {
+#restaurants-list li h2 {
   color:  #000000FF;
   font-family: Arial,sans-serif;
   font-size: 1.3em;
